--- a/packages/ui/src/styles.css
+++ b/packages/ui/src/styles.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.css-1t4lqmc-MuiButtonBase-root-MuiTab-root {
+  min-width: fit-content;
+}
+
+.css-1t4lqmc-MuiButtonBase-root-MuiTab-root.Mui-selected {
+  color: white;
+}
