--- a/apps/admin/src/app/globals.css
+++ b/apps/admin/src/app/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#user-table td,
+#user-table th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#user-table tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#user-table tr:hover {
+  background-color: #ddd;
+}
+
+#user-table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #3b82f6;
+  font-weight: bold;
+  color: white;
+}
+
+.css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.Mui-checked {
+  color: black;
+}
