fix: change the CSS styles

--- a/apps/admin/src/app/globals.css
+++ b/apps/admin/src/app/globals.css
@@ -25,6 +25,6 @@
   color: white;
 }
 
-.css-12wnr2w-MuiButtonBase-root-MuiCheckbox-root.Mui-checked {
-  color: black;
+.Mui-checked {
+  color: black !important;
 }
