--- a/apps/admin/src/app/globals.css
+++ b/apps/admin/src/app/globals.css
@@ -2,21 +2,26 @@
 @tailwind components;
 @tailwind utilities;
 
-#user-table td,
-#user-table th {
+table td,
+table th {
   border: 1px solid #ddd;
   padding: 8px;
 }
 
-#user-table tr:nth-child(even) {
+table tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
-#user-table tr:hover {
+table tr:hover {
   background-color: #ddd;
 }
 
-#user-table th {
+.rejected,
+.rejected:hover {
+  background-color: #989898;
+}
+
+table th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
