--- a/apps/participant/src/app/globals.css
+++ b/apps/participant/src/app/globals.css
@@ -2,26 +2,34 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+table td,
+table th {
+  border: 1px solid #ddd;
+  padding: 8px;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+table tr:nth-child(even) {
+  background-color: #f2f2f2;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+table tr:hover {
+  background-color: #ddd;
+}
+
+.rejected,
+.rejected:hover {
+  background-color: #989898;
+}
+
+table th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: #3b82f6;
+  font-weight: bold;
+  color: white;
+}
+
+.Mui-checked {
+  color: black !important;
 }
